Added pit boxes